server/src/search_executor/snapshots/navigatum_server__search__search_executor__test__good_queries-30.snap
---
source: src/search/search_executor/mod.rs
description: ""
expression: actual
info: "'019 lmu' should get '5123.EG.019' in 1 results"
---
- facet: rooms
  entries:
    - id: 5123.EG.019
      type: room
      name: "5123.EG.\u0019019\u0017 (\u0019LMU\u0017 Hörsaal im Physik Werkstattgebäude)"
      subtext: "garching, LMU Physik Werkstattgebäude"
      subtext_bold: 019@5123
    - id: 5109.EG.019
      type: room
      name: "5109.EG.\u0019019\u0017 (Kernphysiklabor)"
      subtext: "garching, LMU Physik, Munich Center for Advanced Photonics (MAP)"
      subtext_bold: 019@5109
    - id: 5120.EG.019
      type: room
      name: "5120.EG.\u0019019\u0017 (Elektrolabor)"
      subtext: "garching, Beschleuniger"
      subtext_bold: 019@5120
    - id: 5109.01.019
      type: room
      name: "5109.01.\u0019019\u0017 (Büro)"
      subtext: "garching, LMU Physik, Munich Center for Advanced Photonics (MAP)"
      subtext_bold: 019@5109
    - id: 5109.03.019
      type: room
      name: "5109.03.\u0019019\u0017 (Büro)"
      subtext: "garching, LMU Physik, Munich Center for Advanced Photonics (MAP)"
      subtext_bold: 019@5109
    - id: 5123.U1.019
      type: room
      name: "5123.U1.\u0019019\u0017 (Abwasseraufbereitung/-beseitigung)"
      subtext: "garching, LMU Physik Werkstattgebäude"
      subtext_bold: 019@5123
    - id: 8111.EG.019
      type: room
      name: "8111.EG.\u0019019\u0017 (Praktikumsraum)"
      subtext: "garching-hochbrück, Schleißheimerstr. 90a"
      subtext_bold: 0.019@8111
    - id: 1548.01.019
      type: room
      name: "1548.01.\u0019019\u0017 (Seminarraum)"
      subtext: "mri, Schneckenburgerstr. 8, GSF-Container (\"Schneckenbunker\"), Virologie (Bau 548)"
      subtext_bold: 48.1.19@1548
    - id: 1713.U2.019
      type: room
      name: "1713.U2.\u0019019\u0017 (Intensiv)"
      subtext: "mri, Nigerstr. 3, Student Office (Bau 713)"
      subtext_bold: 713.02.19@1713
    - id: 4220.01.019
      type: room
      name: "4220.01.\u0019019\u0017 (Gruppenarbeitsraum)"
      subtext: "weihenstephan, Teilbibliothek Weihenstephan, Pressestelle Datenverarbeitung"
      subtext_bold: OG R 19@4220
  n_visible: 10
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: sites_buildings
  entries: []
  n_visible: 0
  estimatedTotalHits: "[estimatedTotalHits]"
